Fix for horizontal overflow.

--- a/css/bcs-bar.css
+++ b/css/bcs-bar.css
@@ -11,6 +11,7 @@
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 13px;
 	position: relative;
+	overflow-x: hidden;
 }
 
 #bcs-bar ul {
